--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,39 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
+
 header,
 section {
     padding: 1rem;
 }
 /* developer styles go here */
+
+h1 {
+    /* position: sticky; */
+}
+h2 {
+    background-color: tomato;
+    padding: 1rem 0.5rem;
+    color: #fff;
+    margin-bottom: 1.5rem;
+    position: sticky;/*  only works if there are siblings to go allow with the element */
+    top: 0;
+    /* Sticky Positioning can be thought of as a hybrid of relative and fixed positions */
+}
+
+h3 {
+    position: sticky;
+    top: 0;
+    background-color: #fff;
+    
+}
+
+.snowflake {
+    position: fixed;
+    bottom: 10%;
+    right: 5%;
+    z-index: 1;
+}
+
+/* fixed positions are similar to absolute positioned elements - the  natural space took up in the flow of the 
+document is gone  */
